add product model and fix category slug update on category name update
