# backend/src/routes/categoryRoutes.ts
@@ -5,6 +5,7 @@ import {validateRequest} from "../middlewares/validate-request";
 import {
     addCategory, deleteCategory, fetchCategories, fetchCategory, updateCategory, visibleCategories
 } from "../controllers/categoryController";
+import {currentUser} from "../middlewares/current-user";
 
 const router = express.Router()
 
@@ -15,7 +16,9 @@ router.post('/categories', requireAuth, [
 router.get('/categories/all', fetchCategories)
 router.get('/categories', visibleCategories)
 router.get('/categories/:slug', fetchCategory)
-router.patch('/categories/:slug', requireAuth, updateCategory)
-router.delete('/categories/:slug', requireAuth, deleteCategory)
+router.patch('/categories/:slug', currentUser, requireAuth, [
+    body('name').not().isEmpty().trim().withMessage('Category name is required')
+], validateRequest, updateCategory)
+router.delete('/categories/:slug', currentUser, requireAuth, deleteCategory)
 
 export {router as categoryRouter}
